fix alignment of custom size menu

--- a/css/chromatico.css
+++ b/css/chromatico.css
@@ -61,6 +61,7 @@ body {
 
 #colorsAndSliders {
     text-align: right;
+    font-weight: bold;
 }
 
 #theColors {
@@ -103,7 +104,7 @@ body {
 
 #colorSliders div.ui-slider {
     border: 0px;
-    border-top: 1px solid white;
+    border-top: 2px solid white;
     border-radius: 0px;
     background: none;
 }
@@ -118,19 +119,26 @@ body {
     margin-left: -6px;
 }
 
+#sizeForm {
+    width: 200px;
+    height: 32px;
+}
+
 #sizeMenu {
     width: 200px;
 }
 
 #customSize {
-    display: inline;
     font-family: Varela Round;
     font-size: 14px;
     line-height: 30px;
+    width: 180px;
+    margin: 0px 5px 0px 15px;
 }
 
 #customSize input {
     font-family: Varela Round;
+    font-weight: bold;
     font-size: 14px;
     text-align: right;
     width: 40px;
@@ -141,6 +149,9 @@ body {
 
 #customSize .theX {
     margin: 0px 14px 0px 14px;
+    font-family: Varela Round;
+    font-weight: bold;
+    font-size: 14px;
 }
 
 button#clearCustomSize {
